removed comments and updated styles to avoid conflcting styles when switching to dark mode.

--- a/src/components/question-answers/styles/MoreAnsweredQuestions.module.css
+++ b/src/components/question-answers/styles/MoreAnsweredQuestions.module.css
@@ -2,12 +2,10 @@
 background: none;
 border: none;
 padding: 0;
-/* text-decoration: underline; */
 cursor: pointer;
-border: solid 2px rgba(0, 0, 0, 0.8);
+border: solid 2px;
 font-weight: bold;
 font-size: large;
 padding: 20px;
 margin-left: 10px;
-color: #004346;
 }
