--- a/src/styles.css
+++ b/src/styles.css
@@ -54,4 +54,10 @@ theme testing */
   background-color: #000000;
   color: white;
   border-color: white;
+
+}
+#dark button {
+  background-color: #000000;
+  color: white;
+
 }
